class naam veranderd
van row naar row-product

--- a/styles/main.css
+++ b/styles/main.css
@@ -221,7 +221,9 @@ footer{
  .ticket-sale {
     box-shadow:10px 10px 5px grey;
   }
-
+.row-product{
+  
+}
 
 /*
   help! Het lettertype wordt om een of andere reden niet goed geladen... Misschien heeft het iets met het pad naar de fonts te maken?
