--- a/styles/main.css
+++ b/styles/main.css
@@ -222,7 +222,15 @@ footer{
     box-shadow:10px 10px 5px grey;
   }
 .row-product{
-  
+
+}
+.cost-ticket{
+  border-left: solid;
+  border-width: 6px;
+  border-color: #27AE62;
+  box-shadow: 1px 0px 5px #27AE62;
+  padding: 1rem;
+
 }
 
 /*
