--- a/styles/main.css
+++ b/styles/main.css
@@ -243,6 +243,9 @@ footer{
 span{
   font-weight: bold;
 }
+.infoMok{
+  
+}
 
 /*
   help! Het lettertype wordt om een of andere reden niet goed geladen... Misschien heeft het iets met het pad naar de fonts te maken?
