--- a/styles/main.css
+++ b/styles/main.css
@@ -93,6 +93,41 @@ table tfoot{
   font-weight: bold;
 }
 
+.logo{
+  margin: 0 auto;
+  width: 256px;
+}
+
+.row, .row-bottom{
+  display: flex;
+justify-content: space-between;
+margin: 1.5rem 0;
+}
+
+.sidy-by-side{
+  display: flex;
+  align-items: center;
+}
+.ticket-sale {
+  box-shadow:10px 10px 5px grey;
+}
+.row-product{
+
+}
+.cost-ticket{
+border-left: solid;
+border-width: 6px;
+border-color: #27AE62;
+box-shadow: 1px 0px 5px #27AE62;
+padding: 1rem;
+
+}
+span{
+font-weight: bold;
+}
+.infoMok{
+
+}
 article{
   border-left: 5px solid #27AE60;
   padding-left: 10px;
@@ -193,9 +228,13 @@ footer{
   ##Screen = B/w 320px to 479px
   Bron: https://gist.github.com/gokulkrishh/242e68d1ee94ad05f488
 */
+@media (max-width: 1024px) {
 
+}
 @media (max-width: 480px) {
-
+  .row, .row-bottom{
+    flex-direction: column;
+  }
 }
 
 /* 
@@ -203,49 +242,8 @@ footer{
   ##Screen = B/w 768px to 1024px
 */
 
-@media (max-width: 481px) {
 
-}
-  .logo{
-    margin: 0 auto;
-    width: 256px;
-  }
-
-  .row{
-    display: flex;
-  justify-content: space-between;
-  margin: 1.5rem 0;
-
-  }
-  .row-bottom{ 
-    display: flex;
-    justify-content: space-between;
-  margin: 1.5rem 0;
-   }
-  .sidy-by-side{
-    display: flex;
-    align-items: center;
-  }
- .ticket-sale {
-    box-shadow:10px 10px 5px grey;
-  }
-.row-product{
-
-}
-.cost-ticket{
-  border-left: solid;
-  border-width: 6px;
-  border-color: #27AE62;
-  box-shadow: 1px 0px 5px #27AE62;
-  padding: 1rem;
-
-}
-span{
-  font-weight: bold;
-}
-.infoMok{
   
-}
 
 /*
   help! Het lettertype wordt om een of andere reden niet goed geladen... Misschien heeft het iets met het pad naar de fonts te maken?
