--- a/styles/main.css
+++ b/styles/main.css
@@ -61,8 +61,13 @@ h1{
     1px 1px 0 #FCFCFC;
 }
 
-h2{
+.payment-h2{
   border-left: 5px solid #27AE60;
+  text-align: left;
+  padding: 4px;
+  margin-bottom: 26px;
+}
+h2{
   padding-left: 10px;
 }
 
@@ -97,11 +102,23 @@ table tfoot{
   margin: 0 auto;
   width: 256px;
 }
+article h2{
+  margin: 0;
+  padding: 1.5em;
+  border-left: none;
+  background-position: center;
+  background-size: cover;
+  text-align: center;
+}
 
 .row, .row-bottom{
   display: flex;
 justify-content: space-between;
 margin: 1.5rem 0;
+border-left: 5px solid #27AE60;
+padding-left: 10px;
+margin: 1em 1em 1em 0;
+
 }
 
 .sidy-by-side{
@@ -112,38 +129,47 @@ margin: 1.5rem 0;
   box-shadow:10px 10px 5px grey;
 }
 .row-product{
-
+border-left: 5px solid #27AE60;
+padding-left: 10px;
+margin: 1em 1em 1em 0;
 }
+
 .cost-ticket{
 border-left: solid;
 border-width: 6px;
 border-color: #27AE62;
 box-shadow: 1px 0px 5px #27AE62;
 padding: 1rem;
-
+border-left: 5px solid #27AE60;
 }
+
 span{
 font-weight: bold;
 }
-.infoMok{
+
+main .foto-mok{
+  display: flex;
+  justify-content: space-between;
+  margin-right: 240px;
+}
+.text-pro{
+  border-left: 5px solid #27AE60;
+padding-left: 10px;
+margin: 1em 1em 1em 0;
 
 }
-article{
-  border-left: 5px solid #27AE60;
-  padding-left: 10px;
-  margin: 1em 1em 1em 0;
-}
+
 article:last-of-type{
   margin-right: 0;
 }
 
-article h2{
+.article-payment{
   margin: 0;
   padding: 1.5em;
   border-left: none;
   background-position: center;
   background-size: cover;
-  text-align: center;
+  text-align: left;
 }
 article h2.fun-for-family{
   background-image: url('../images/family-fun-george-arthur-pflueger.jpg');
@@ -222,7 +248,24 @@ footer{
 .hidden-on-lg{
   display: none;
 }
+.product-text{
+  border-left: 5px solid #27AE60;
+padding-left: 10px;
+margin: 1em 1em 1em 0;
 
+}
+th{
+  border-bottom: solid;
+  border-width: 1px;
+}
+h4{
+  margin-left: 700px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.total-price{
+margin-left: 800px;
+}
 /* 
   ##Device = Most of the Smartphones Mobiles (Portrait)
   ##Screen = B/w 320px to 479px
@@ -241,8 +284,13 @@ footer{
   .hidden-on-sm{
     display: none;
   }
+  main .sidy-by-side {
+    display: flex;
+    flex-direction: column;
+  }
   
 }
+
 
 /* 
   ##Device = Tablets, Ipads (portrait)
