added euro and mobile style to mok

--- a/styles/main.css
+++ b/styles/main.css
@@ -288,6 +288,10 @@ margin-left: 800px;
     display: flex;
     flex-direction: column;
   }
+  .foto-mok{
+    flex-direction: column;
+    align-items: center;
+  }
   
 }
 
