--- a/styles/main.css
+++ b/styles/main.css
@@ -12,7 +12,7 @@
 
 
 
-/*index styling*/
+/*algemeen styling*/
 body, html{
   margin: 0;
   padding: 0;
@@ -33,22 +33,7 @@ header{
   background-position: center;
   background-color: #CCCCCC;
 }
-.logo{
-  margin: 0 auto;
-  width: 512px;
-}
 
-.header-content{
-  padding: 1em;
-  text-align: center;
-  background-color: rgba(255, 255, 255, 0.5);
-  /* Deze animatie wordt onder aan dit bestand gedefinieerd/aangemaakt */
-  -webkit-animation: fadein 4s; /* Safari, Chrome and Opera > 12.1 */
-  -moz-animation: fadein 4s; /* Firefox < 16 */
-  -ms-animation: fadein 4s; /* Internet Explorer */
-  -o-animation: fadein 4s; /* Opera < 12.1 */
-  animation: fadein 4s;
-}
 
 h1{
   margin: 0;
@@ -61,9 +46,7 @@ h1{
     -1px 1px 0 #FCFCFC,
     1px 1px 0 #FCFCFC;
 }
-.hidden-on-lg{
-  display: none;
-}
+
 
 article h2{
   margin: 0;
@@ -74,28 +57,7 @@ article h2{
   text-align: center;
 }
 
-.row, .row-bottom{
-  display: flex;
-  justify-content: space-between;
-  margin: 1.5rem 0;
-  border-left: 5px solid #27AE60;
-  padding-left: 10px;
-  margin: 1em 1em 1em 0;}
 
-.cost-ticket{
-  border-left: solid;
-  border-width: 6px;
-  border-color: #27AE62;
-  box-shadow: 1px 0px 5px #27AE62;
-  padding: 1rem;
-  border-left: 5px solid #27AE60;
-  }
-.product{
-  margin-right: 1em;
-  padding: 1em;
-  background: #CCCCCC;
-  text-align: center;
-  }
 
 h2{
     padding-left: 10px;
@@ -103,16 +65,7 @@ h2{
 
 main{
     padding: 1em;
-  
-  }
-
-.payment-h2{
-  border-left: 5px solid #27AE60;
-  text-align: left;
-  padding: 4px;
-  margin-bottom: 26px;
 }
-
 
 table{
   margin-top: 1em;
@@ -135,24 +88,103 @@ table th.slim{
 table tfoot{
   font-weight: bold;
 }
+th{
+  border-bottom: solid;
+  border-width: 1px;
+}
+h4{
+  margin-left: 700px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+button{
+  width: 100%;
+  margin-top: 1em;
+  padding: .5em;
+  background: #27AE60;
+  border: 2px solid #FCFCFC;
+  color: #000000;
+  font-weight: bold;
+  cursor: pointer;
+}
 
+span{
+  font-weight: bold;
+  }
+
+footer{
+  padding: 1em;
+  background: #303030;
+  color: #ffffff;
+}
+
+
+/*styling classes*/
+.logo{
+  margin: 0 auto;
+  width: 512px;
+}
+
+.header-content{
+  padding: 1em;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.5);
+  /* Deze animatie wordt onder aan dit bestand gedefinieerd/aangemaakt */
+  -webkit-animation: fadein 4s; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein 4s; /* Firefox < 16 */
+  -ms-animation: fadein 4s; /* Internet Explorer */
+  -o-animation: fadein 4s; /* Opera < 12.1 */
+  animation: fadein 4s;
+}
+
+.hidden-on-lg{
+  display: none;
+}
+
+.row, .row-bottom{
+  display: flex;
+  justify-content: space-between;
+  margin: 1.5rem 0;
+  border-left: 5px solid #27AE60;
+  padding-left: 10px;
+  margin: 1em 1em 1em 0;}
+
+.cost-ticket{
+  border-left: solid;
+  border-width: 6px;
+  border-color: #27AE62;
+  box-shadow: 1px 0px 5px #27AE62;
+  padding: 1rem;
+  border-left: 5px solid #27AE60;
+  }
+
+.product{
+  margin-right: 1em;
+  padding: 1em;
+  background: #CCCCCC;
+  text-align: center;
+  }
+
+  .payment-h2{
+    border-left: 5px solid #27AE60;
+    text-align: left;
+    padding: 4px;
+    margin-bottom: 26px;
+  }
 
 .sidy-by-side{
   display: flex;
   align-items: center;
 }
+
 .ticket-sale {
   box-shadow:10px 10px 5px grey;
 }
+
 .row-product{
 border-left: 5px solid #27AE60;
 padding-left: 10px;
 margin: 1em 1em 1em 0;
-}
-
-
-span{
-font-weight: bold;
 }
 
 main .foto-mok{
@@ -160,11 +192,11 @@ main .foto-mok{
   justify-content: space-between;
   margin-right: 240px;
 }
+
 .text-pro{
   border-left: 5px solid #27AE60;
 padding-left: 10px;
 margin: 1em 1em 1em 0;
-
 }
 
 article:last-of-type{
@@ -179,24 +211,25 @@ article:last-of-type{
   background-size: cover;
   text-align: left;
 }
+
 article h2.fun-for-family{
   background-image: url('../images/family-fun-george-arthur-pflueger.jpg');
   text-shadow:0 0 0 #FCFCFC,-1px -1px 0 #FCFCFC,1px -1px 0 #FCFCFC,-1px 1px 0 #FCFCFC,1px 1px 0 #FCFCFC;
 }
+
 article h2.accessibility{
   background-image: url('../images/accessible-eunice-stahl.jpg');
   text-shadow:0 0 0 #FCFCFC,-1px -1px 0 #FCFCFC,1px -1px 0 #FCFCFC,-1px 1px 0 #FCFCFC,1px 1px 0 #FCFCFC;
-
 }
+
 article h2.rides{
   background-image: url('../images/drone-drew-dau.jpg');
   text-shadow:0 0 0 #FCFCFC,-1px -1px 0 #FCFCFC,1px -1px 0 #FCFCFC,-1px 1px 0 #FCFCFC,1px 1px 0 #FCFCFC;
-
 }
+
 article h2.open-forever{
   background-image: url('../images/open-james-lee.jpg');
   text-shadow:0 0 0 #FCFCFC,-1px -1px 0 #FCFCFC,1px -1px 0 #FCFCFC,-1px 1px 0 #FCFCFC,1px 1px 0 #FCFCFC;
-
 }
 
 .product{
@@ -205,6 +238,7 @@ article h2.open-forever{
   background: #CCCCCC;
   text-align: center;
 }
+
 .product:last-of-type{
   margin-right: 0;
 }
@@ -212,21 +246,11 @@ article h2.open-forever{
 .product span{
   display: block;
 }
+
 .product img{
   width: 100%;
   max-width: 250px;
   margin: 0 auto;
-}
-
-button{
-  width: 100%;
-  margin-top: 1em;
-  padding: .5em;
-  background: #27AE60;
-  border: 2px solid #FCFCFC;
-  color: #000000;
-  font-weight: bold;
-  cursor: pointer;
 }
 
 .payment-option{
@@ -243,32 +267,16 @@ button{
   flex: 1;
 }
 
-footer{
-  padding: 1em;
-  background: #303030;
-  color: #ffffff;
-}
-
 .copyright{
   text-align: center;
 }
-
 
 .product-text{
   border-left: 5px solid #27AE60;
 padding-left: 10px;
 margin: 1em 1em 1em 0;
+}
 
-}
-th{
-  border-bottom: solid;
-  border-width: 1px;
-}
-h4{
-  margin-left: 700px;
-  margin-top: 0;
-  margin-bottom: 0;
-}
 .total-price{
 margin-left: 800px;
 }
